layout commit from Baoyan

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
     <string name="search_cat_images">Search cat images</string>
     <string name="search">Search</string>
     <string name="cat_images">Cat Images</string>
+    <string name="firebase_register">Register</string>
+    <string name="firebase_username">Enter Your Username To Register</string>
+    <string name="sendSticker_send">SEND</string>
+    <string name="sendSticker_Check">Check History</string>
 </resources>
