--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">CS5520_Group9</string>
-    <string name="team_name">Team Name</string>
+    <string name="team_name">About</string>
     <string name="web_service">Web Service</string>
     <string name="firebase_database">Firebase Database</string>
     <string name="group_project">Group Project</string>
