A8: change button name to "Stick It To Em"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">CS5520_Group9</string>
     <string name="team_name">About</string>
     <string name="web_service">Web Service</string>
-    <string name="firebase_database">Firebase Database</string>
+    <string name="firebase_database">Stick It To Em</string>
     <string name="group_project">Group Project</string>
     <string name="team">Team Name: Group 9 \nTeam members:\nShoujuan Fan\n
         Cai Zhang\nLiyang Pang\nBaoyan Li\nYaozheng Wang</string>
