--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="from_user_string">From User</string>
     <string name="send_time_string">Send Time</string>
     <string name="send_to">Send to:</string>
+    <string name="register_game">Create Account</string>
 </resources>
