Final Project: add game design, game activity, game setting and relevant layout file

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,17 +23,15 @@
     <string name="login_name">Log in</string>
     <string name="register_name">Register</string>
     <string name="setting_game">Game</string>
-    <string name="setting_difficulty">Difficulty</string>
+    <string name="setting_difficulty">Difficulty Level</string>
     <string name="setting_playmode">Play Mode</string>
     <string name="setting_button_add">+</string>
     <string name="setting_button_subtract">-</string>
-    <string name="setting_button_multiply">×</string>
-    <string name="setting_button_divide">÷</string>
     <string name="setting_button_easy">Easy</string>
     <string name="setting_button_medium">Medium</string>
     <string name="setting_button_hard">Hard</string>
     <string name="setting_button_single_player">Single Player</string>
-    <string name="setting_button_play_with_friend">Play against Someone</string>
+    <string name="setting_button_play_with_friend">Play against Other Player</string>
     <string name="setting_button_play">Play</string>
     <string name="score_board">Score Board</string>
     <string name="setting_button_logout">Logout</string>
